# sol_factory

./: .gitignore  Anchor.toml  README.MD  package-lock.json  package.json
programs/sol_factory/: Cargo.toml
programs/sol_factory/src/: constant.rs  errors.rs  lib.rs  state.rs
programs/sol_factory/src/context/: admin_init.rs  admin_remove.rs  airdrop_placeholder.rs  burn_placeholder.rs  buy_placeholder.rs  close_collection.rs  create_collection.rs  create_nft.rs  create_placeholder.rs  mod.rs  protocol_setting.rs  transfer_nft.rs
tests/: sol_factory.ts
