[package]
name = "sol_factory"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["token", "metadata"]}
solana-program = "1.18.17"
spl-token = "=4.0.1"
spl-token-2022 = {version = "3.0.2", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.3.3"
spl-pod = "0.2.0"